# CPP-MyLanguage

./: .gitignore  CMakeLists.txt  README.md  input.json  m  main.cpp  my_language.cpp  my_language.hpp  style.astylerc
include/Language/: my_language.hpp
source/: main.cpp  my_language.cpp  test.cpp
